Fix overflow/scrolling issues
Applying flex display to the top-level items (plus setting flex: 1 on
the grid) fixes things.

--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
 body {
     background-color: black;
     margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .cell-grid {
     display: grid;
-    min-height: 100vh;
+    flex: 1;
 }
 
 .cell {
